overflow fix

--- a/styles/global.css
+++ b/styles/global.css
@@ -30,6 +30,7 @@ body{
 	text-align: left;
 	font-family: '$hn-regular', 'Helvetica-Neue', 'Helvetica', Arial, sans-serif;
 	font-style: none;
+	overflow-x: hidden;
 }
 
 p{
@@ -186,10 +187,6 @@ section img{
 
 
 @media (max-width:767px){
-
-	body{
-		overflow-x: hidden;
-	}
 	
 	section{
 		padding-bottom:40px;
